--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt   # <-- file name spelling corrected
+          pip install -r requierements.txt   # <-- file name spelling corrected
 
       - name: Run tests
         run: pytest
